--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,14 +1,21 @@
-.questions-list li {
-    background-color: #FFF; 
-    color: #1C1A1A;
+.questions-item {
+    list-style: none;
     font-weight: 700;
     font-size: 24px;
     padding: 30px 70px;
     margin-bottom: 20px;
 }
 
-.questions-list :nth-child(2n) {
+.questions-list :last-child {
+    margin-bottom: 0;
+}
+
+.questions-list :nth-child(odd) {
+    color: #1C1A1A;
+    background-color: #FFF; 
+} 
+
+.questions-list :nth-child(even) {
     background-color: #440F51;
-    color: #FFF;
-    
+    color: #FFF;    
 }
