--- a/styles/faq.css
+++ b/styles/faq.css
@@ -27,4 +27,14 @@
     width: 2464px;
     height: 3371px;
     z-index: 98;
-  }
+}
+
+.questions-list {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+.questions-list :last-child {
+    margin-bottom: 0;
+}
