--- a/styles/index.css
+++ b/styles/index.css
@@ -1,2 +1,7 @@
 @import "../styles/style.css";
 @import "../styles/faq.css";
+@import "../styles/section-header.css";
+@import "../styles/section-halls.css";
+@import "../styles/section-about.css";
+@import "../styles/section-contacts.css";
+@import "../styles/section-reserve.css";
