--- a/styles/index.css
+++ b/styles/index.css
@@ -5,3 +5,4 @@
 @import "../styles/section-about.css";
 @import "../styles/section-contacts.css";
 @import "../styles/section-reserve.css";
+@import "../styles/normalize.css";
