--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,64 @@
-* {
+*,
+*::before,
+*::after {
+box-sizing: inherit;
+}
+
+html {
     box-sizing: border-box;
+    position: relative;
+}
+
+img, svg {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
+
+button {
+    padding: 0;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul, ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+p,
+figure,
+fieldset,
+blockquote {
+    margin: 0;
 }
 
 .body {
+    min-width: 320px;
+    min-height: 100vh;
     background-color: #1B1A1B;
     color: #FFF;
     margin: 0;
-    font-family: "Arial";
+    font-family: "Arial",sans-serif;
     font-size: 20px;
     font-weight: 400; 
 }
 
-.wrapper {
-    width: 1200px;
+.container {
+    max-width: 1240px;
     padding: 0 30px;
     margin: 0 auto;
 }
 
-.container {
-    width: 1180px;
-}
-
 .section {
-    padding-bottom: 100px;
+    padding-top: 100px;
 }
 
 .section-header {
@@ -37,14 +73,13 @@
     text-align: center;
 }
 
-.subtitle:last-of-type {
+.subtitle :last-of-type {
     margin-bottom: 54px;
 }
 
-.text {
-    margin-top: 0;
-    margin-bottom: 0;
-}
+
+
+
 
 
 
