--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 @import "../styles/style.css";
 @import "../styles/faq.css";
-@import "../styles/section-header.css";
+@import "../styles/section-main.css";
 @import "../styles/section-halls.css";
 @import "../styles/section-about.css";
 @import "../styles/section-contacts.css";
