--- a/styles/section-main.css
+++ b/styles/section-main.css
@@ -1,20 +1,21 @@
-.header {
+.hero {
     min-height: 823px;
     background: url("../img/man.png") no-repeat;
     background-position: bottom 0 right 0;
     background-size: 675px 762px;  
 }
 
-.main-title {
+.hero-title {
     text-transform: uppercase;
     font-weight: 900;
     font-size: 150px; 
     line-height: 150px;
-    letter-spacing: -15px;
-    width: 883px;
+    letter-spacing: -12px;
+    min-width: 883px;
+    
 }
 
-.text-header {
+.text-hero{
     padding-left: 100px;
     font-size: 28px;
     line-height: 50px;
