--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,16 @@ blockquote {
 }
 
 .section {
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.section:first-child {
+    padding-top: 146px;
+}
+
+.section:last-child {
+    padding-bottom: 51px;
 }
 
 .section-header {
