--- a/styles/about.css
+++ b/styles/about.css
@@ -1,17 +1,14 @@
-.subtitle-about {
+.about__title {
     margin-bottom: 50px;
 }
 
-.text-about {
-    line-height: 28px;
-} 
-
-.text-about:not(:last-of-type) {
+.about__info :first-child {
     margin-bottom: 22px;
 }
 
-.info-about {
+.about__info {
     margin-bottom: 70px;
+    line-height: 28px;
 }
 
 .blockquote {
@@ -20,10 +17,18 @@
     padding-left: 55px;
     line-height: 50px;
     position: relative;
-    display: flow-root;  
+    display: flow-root; 
+    quotes: none; 
 }
 
-.blockquote:before {
+.blockquote__text {
+    max-width: 1125px;
+    text-align: left;  
+    white-space: pre;
+    margin-bottom: 40px; 
+}
+
+.blockquote__text:before {
     content: "\201c";
     color: #6C0287;
     font-weight: 900;
@@ -32,39 +37,26 @@
     top: -8px;
 }
 
-.cite {
-    float: right;
-    text-transform:none;
-    line-height: 28px;
-    font-size: 20px;  
-}
-
-.man-text {
-    float: right;
-    text-transform: none;
-    line-height: 28px;
-    font-size: 20px;
-    width: 250px;   
-}
-
-.quote {
-    max-width: 1125px;
-    text-align: left;  
-    quotes: none;
-}
-
-.quote:after {
+.blockquote__text:after {
     content: " \201d";
     color: #6C0287;
     font-weight: 900; 
 }
 
-.text-quote {
-    white-space: pre;
-    margin-bottom: 40px;
+.blockquote__image-block {
+    float: right;
+    text-transform: none;
+    line-height: 28px; 
+    font-size: 20px;
+    margin-right: 30px; 
 }
 
-.img-man {
+.image-block__text {
+    float: right;
+    width: 250px;   
+}
+
+.image-block__img {
     width: 80px;
     height: 80px;
     border-radius: 100px;
