--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,21 +1,19 @@
-.hero {
+.hero__container {
     min-height: 823px;
     background: url("../img/man.png") no-repeat;
     background-position: bottom 0 right 0;
     background-size: 675px 762px;  
 }
 
-.hero-title {
+.hero__title {
     text-transform: uppercase;
     font-weight: 900;
     font-size: 150px; 
     line-height: 150px;
-    letter-spacing: -12px;
-    min-width: 883px;
-    
+    letter-spacing: -12px;  
 }
 
-.text-hero{
+.hero__text{
     padding-left: 100px;
     font-size: 28px;
     line-height: 50px;
