--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,8 @@
 @import "../styles/style.css";
 @import "../styles/faq.css";
-@import "../styles/section-main.css";
-@import "../styles/section-halls.css";
-@import "../styles/section-about.css";
-@import "../styles/section-contacts.css";
-@import "../styles/section-reserve.css";
+@import "../styles/hero.css";
+@import "../styles/halls.css";
+@import "../styles/about.css";
+@import "../styles/footer.css";
+@import "../styles/reserve.css";
 @import "../styles/normalize.css";
