--- a/styles/about.css
+++ b/styles/about.css
@@ -8,7 +8,7 @@
 
 
 .about__info {
-    margin-bottom: 70px;
+    margin-bottom: 48px;
     line-height: 28px;
 }
 
@@ -23,9 +23,7 @@
 }
 
 .blockquote__text {
-    max-width: 1125px;
-    text-align: left;  
-    white-space: pre;
+    max-width: 400px;
     margin-bottom: 40px; 
 }
 
@@ -65,4 +63,9 @@
     object-position: top -10px left 0;
     float: left;
     margin-right: 30px;
+}
+
+.about__block {
+    float: right;
+    width: 450px;
 }
