--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,7 @@
+.about {
+    display: flow-root;
+}
+
 .about__text {
     margin-bottom: 22px;
 }
@@ -15,7 +19,7 @@
 .blockquote {
     text-transform: uppercase;
     font-size: 44px;
-    padding-left: 55px;
+    padding-left: 31px;
     line-height: 50px;
     position: relative;
     display: flow-root; 
@@ -47,7 +51,7 @@
     text-transform: none;
     line-height: 28px; 
     font-size: 20px;
-    margin-right: 30px; 
+    margin-right: 10px; 
 }
 
 .creator__text {
@@ -67,5 +71,5 @@
 
 .about__block {
     float: right;
-    width: 450px;
+    width: 490px;
 }
