--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,4 @@
 @import "../styles/footer.css";
 @import "../styles/reserve.css";
 @import "../styles/normalize.css";
+@import "../styles/reviews.css"
