--- a/styles/halls.css
+++ b/styles/halls.css
@@ -2,20 +2,33 @@
     font-size: 70px;
     font-weight: 700;
     text-align: center;
-    line-height: 80px;
-    text-transform: uppercase;
-    max-width: 211px;
-    margin: 0 auto;
+    text-transform: uppercase; 
 }
 
 .halls__item {
-    height: 710px;
-    margin-bottom: 60px;
-    padding-top: 275px;
+    display: inline-block;
+    width: 576px;
+    height: 340px;
+    margin-bottom: 20px;
+    padding: 135px 0;
+    background-size: cover; 
+}
+
+.halls__item:nth-child(odd) {
+    margin-right: 20px;
+}
+
+.halls__item:nth-child(3n) {
+    margin-bottom: 0;   
+}
+
+.halls__list :last-child {
+    margin-bottom: 0;
+    margin-right: 0; 
 }
 
 .halls__item--image--vibes {
-    background-image: url("../img/80s-vibes.jpg");
+    background-image: url("../img/80s-vibes.jpg");  
 }
 
 .halls__item--image--starwars {
@@ -30,6 +43,3 @@
     background-image: url("../img/neon-style.jpg");
 }
 
-.halls__list :last-child {
-    margin-bottom: 0;
-}
