--- a/styles/index.css
+++ b/styles/index.css
@@ -6,4 +6,6 @@
 @import "../styles/footer.css";
 @import "../styles/reserve.css";
 @import "../styles/normalize.css";
-@import "../styles/reviews.css"
+@import "../styles/reviews.css";
+@import "../styles/header.css";
+@import "../styles/entertainment.css";
