--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,8 +1,7 @@
 .hero__container {
     min-height: 823px;
-    background: url("../img/man.png") no-repeat;
-    background-position: bottom 0 right 0;
-    background-size: 675px 762px;  
+    position: relative;
+    z-index: 0;
 }
 
 .hero__title {
@@ -10,11 +9,73 @@
     font-weight: 900;
     font-size: 150px; 
     line-height: 150px;
-    letter-spacing: -12px;  
+    letter-spacing: -15px;  
 }
 
-.hero__text{
+.hero__text {
     padding-left: 100px;
     font-size: 28px;
     line-height: 50px;
+    margin-bottom: 30px;
+}
+
+.hero__image-arrow {
+    position: absolute;
+    right: 576px;
+    bottom : 95px;
+    z-index: 1;
+}
+
+.hero__image-man {
+    position: absolute;
+    right: 30px;
+    bottom : 0;
+}
+
+.booking-about {
+    display: flex;
+    gap: 43px;
+    margin-bottom: 150px;
+}
+
+.booking-about__text {
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    flex-basis: 163px;
+}
+
+.booking-about__text:before{
+    color:rgba(205, 6, 255, 1);
+    font-weight: 900;  
+}
+
+.booking-about__text--text-new:before {
+    content: "new";
+    display: block;
+    font-size: 75px;
+    line-height: 139px;
+    
+}
+
+.booking-about__text--number-4:before {
+    content: "4";
+    display: block;
+    font-size: 100px;
+    line-height: 141px;
+    align-items: end;  
+}
+
+.hero__booking-button {
+    width: 374px;
+    height: 80px;
+    position: absolute;
+    font-weight: 700;
+    font-size: 26px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background-color: #6C0287;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #6c0287;
+
 }
