--- a/styles/header.css
+++ b/styles/header.css
@@ -20,10 +20,12 @@
 }
 
 .menu__button {
+    font-weight: 700;
     padding: 12px 32px;
     text-transform: uppercase;
     background-color: transparent;
     color: #FFFFFF;
     border: 3px solid #CD06FF;
     border-radius: 10px;
+    line-height: 40px;  
 }
