--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,4 @@
 .footer__contacts {
-    display: block;
     margin-bottom: 39px;
     max-width: 380px;
 }
@@ -17,6 +16,7 @@
     padding-left: 63px;
     width: 360px;
     font-size: 24px;
+    font-style: normal;
     line-height: 28px; 
     font-weight: 700;
     display: block;
@@ -58,20 +58,26 @@
     font-size: 0;  
 }
 
-.nav__list :last-child {
+.nav__list:last-child {
     margin-right: 0;
 }
 
 .nav__link {
-    display: block;
+    display: inline-block;
+}
+
+.nav__img {
+    width: 50px;
+    height: 50px;
 }
 
 .nav__item {
+    display: inline;
     margin-right: 27px;
-    display: inline-block;
-    line-height: 16px;
+    display: inline-block;  
 }
 
 .about-author {
     text-align: end;
 }
+
