--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,17 @@
 .hero__container {
     min-height: 823px;
     position: relative;
-    z-index: 0;
+}
+
+.hero__container:after {
+    content: "";
+    background-image: url(../img/man.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 675px;
+    height: 762px;
+    right: 30px;
+    bottom: 0;
 }
 
 .hero__title {
@@ -21,61 +31,51 @@
 
 .hero__image-arrow {
     position: absolute;
-    right: 576px;
-    bottom : 95px;
+    left: 46%;
+    bottom: 90px;
     z-index: 1;
 }
 
-.hero__image-man {
-    position: absolute;
-    right: 30px;
-    bottom : 0;
-}
-
-.booking-about {
+.hero__block {
     display: flex;
     gap: 43px;
     margin-bottom: 150px;
-}
-
-.booking-about__text {
-    font-size: 30px;
-    line-height: 35px;
-    text-align: center;
-    flex-basis: 163px;
-}
-
-.booking-about__text:before{
     color:rgba(205, 6, 255, 1);
     font-weight: 900;  
 }
 
-.booking-about__text--text-new:before {
-    content: "new";
-    display: block;
-    font-size: 75px;
-    line-height: 139px;
-    
+.hero__block-about {
+    text-align: center;
+    max-width: 193px;
+    line-height: ;
 }
 
-.booking-about__text--number-4:before {
-    content: "4";
-    display: block;
+.hero__item-number {
     font-size: 100px;
-    line-height: 141px;
-    align-items: end;  
+    line-height: 105px;
+    padding-bottom: 35px;
+}
+
+.hero__item-word {
+    font-size: 75px;
+    line-height: 141px; 
+}
+
+.hero__item-text {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    color: #FFFFFF; 
 }
 
 .hero__booking-button {
-    width: 374px;
-    height: 80px;
-    position: absolute;
+    display: block;
+    padding: 25px 69px;
     font-weight: 700;
     font-size: 26px;
     text-transform: uppercase;
-    color: #FFFFFF;
     background-color: #6C0287;
     border-radius: 10px;
-    box-shadow: 0 0 10px #6c0287;
-
+    box-shadow: 0 0 5px 5px #6c0287;
 }
