--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ a {
 
 fieldset {
     border: 0 none;
+    padding: 0;
 }
 
 ul, ol {
@@ -74,7 +75,7 @@ blockquote {
     text-transform: uppercase;
     font-size: 40px;
     text-align: center;
-    width: 980px;
+    width: 860px;
     margin: 0 auto;
     margin-bottom: 50px;
     line-height: 50px;  
